; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_ftrace.c_ignore_task_cpu.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_ftrace.c_ignore_task_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.trace_pid_list = type { i32 }

@ftrace_lock = common dso_local global i32 0, align 4
@current = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ignore_task_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ignore_task_cpu(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.trace_array*, align 8
  %4 = alloca %struct.trace_pid_list*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.trace_array*
  store %struct.trace_array* %6, %struct.trace_array** %3, align 8
  %7 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %8 = getelementptr inbounds %struct.trace_array, %struct.trace_array* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @mutex_is_locked(i32* @ftrace_lock)
  %11 = call %struct.trace_pid_list* @rcu_dereference_protected(i32 %9, i32 %10)
  store %struct.trace_pid_list* %11, %struct.trace_pid_list** %4, align 8
  %12 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %13 = getelementptr inbounds %struct.trace_array, %struct.trace_array* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.trace_pid_list*, %struct.trace_pid_list** %4, align 8
  %19 = load i32, i32* @current, align 4
  %20 = call i32 @trace_ignore_this_task(%struct.trace_pid_list* %18, i32 %19)
  %21 = call i32 @this_cpu_write(i32 %17, i32 %20)
  ret void
}

declare dso_local %struct.trace_pid_list* @rcu_dereference_protected(i32, i32) #1

declare dso_local i32 @mutex_is_locked(i32*) #1

declare dso_local i32 @this_cpu_write(i32, i32) #1

declare dso_local i32 @trace_ignore_this_task(%struct.trace_pid_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
